HCSVLAB-524: fixed z-indexing on parent to make dropdown display ontop

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -66,6 +66,7 @@ textarea{
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  z-index: 0;
 }
 
 .label .remove {
@@ -130,7 +131,6 @@ border-width: 0 0 0px;
 .well .search-form { margin: 0; }
 #frequency_search_form .btn.search-btn, #concordance_search_form .btn.search-btn { width: 74px; }
 
-#sortAndPerPage form.pull-right { position: relative; margin: -5px 10px 0 0; }
 
 .input-append input, .input-append select, .input-append .uneditable-input {
 -webkit-border-radius: 3px 0 0 3px; -moz-border-radius: 3px 0 0 3px; border-radius: 3px 0 0 3px;
@@ -377,7 +377,7 @@ padding-right: 14px;
 #sortAndPerPage {
   min-height: 20px;
   padding: 10px 20px;
-  z-index: 0;
+  z-index: 1;
   position: relative;
   margin-bottom: 20px;
   background-color: whitesmoke;
@@ -390,6 +390,8 @@ padding-right: 14px;
   box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.05);
   text-align: center;
 }
+
+#sortAndPerPage form.pull-right { position: relative; margin: -5px 10px 0 0; }
 
 .btn a { color: #333; }
 
